--- a/index.html
+++ b/index.html
@@ -19,37 +19,79 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="react-explicit-prop-declaration-mixin" class="anchor" href="#react-explicit-prop-declaration-mixin" aria-hidden="true"><span class="octicon octicon-link"></span></a>React Explicit Prop Declaration Mixin</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>A ReactJS Mixin to ensure that components explicitly define the properties they
+allow in their <code>propTypes</code>. If a property passed in to the React component is
+not found in <code>propTypes</code> then an error will be thrown.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>This is useful for ensuring that all component property interfaces be
+explicitly defined, which helps when reasoning about what properties a component
+will accept.</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p><strong>Let's keep our interfaces clean and well documented!</strong></p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<h2>
+<a id="example" class="anchor" href="#example" aria-hidden="true"><span class="octicon octicon-link"></span></a>Example</h2>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>Let's define a very basic React component.</p>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<div class="highlight highlight-javascript"><pre><span class="pl-k">var</span> ExplicitPropDeclarationMixin <span class="pl-k">=</span> <span class="pl-c1">require</span>(<span class="pl-s"><span class="pl-pds">'</span>react_explicit_prop_declaration<span class="pl-pds">'</span></span>);
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<span class="pl-k">var</span> MyComponent <span class="pl-k">=</span> React.createClass({
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+  mixins<span class="pl-k">:</span> [ExplicitPropDeclarationMixin],
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+  propTypes<span class="pl-k">:</span> {
+    defined<span class="pl-k">:</span> React.PropTypes.bool
+  },
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+  <span class="pl-en">render</span>: <span class="pl-k">function</span> () {
+    <span class="pl-c">// ...</span>
+  }
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+});</pre></div>
+
+<p>And now let's render that component with the property we defined in <code>propTypes</code>:</p>
+
+<div class="highlight highlight-javascript"><pre>React.render(<span class="pl-k">&lt;</span>MyComponent defined<span class="pl-k">=</span>{<span class="pl-c1">true</span>}} /<span class="pl-k">&gt;</span></pre></div>
+
+<blockquote>
+<p></p>
+</blockquote>
+
+<p>Cool, so let's do the same, but this time, with a property we did not define in
+<code>propTypes</code>.</p>
+
+<div class="highlight highlight-javascript"><pre>React.render(<span class="pl-k">&lt;</span>MyComponent notDefined<span class="pl-k">=</span>{<span class="pl-c1">false</span>} defined<span class="pl-k">=</span>{<span class="pl-c1">true</span>}} /<span class="pl-k">&gt;</span></pre></div>
+
+<p>Eeek! An error was thrown telling us what went wrong!</p>
+
+<blockquote>
+<p>ExplicitPropDeclarationError: The properties "notDefined" were set on the MyComponent, which were not declared in MyComponent.propTypes. Only properties defined in MyComponent.propTypes are allowed to be set on MyComponent.</p>
+</blockquote>
+
+<p>Looks like, we, as developers need to decide to <em>explicitly</em> define another
+<code>propType</code> we allow on this component, or fix our <code>render</code> call to not pass in
+unexpected properties.</p>
+
+<h2>
+<a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributing</h2>
+
+<p>If you would like to contribute code, please do the following:</p>
+
+<ol>
+<li>Fork this repository and make your changes.</li>
+<li>Write tests for any new functionality. If you are fixing a bug that tests did not cover, please make a test that reproduces the bug.</li>
+<li>Add your name to the "contributors" section in the package.json file.</li>
+<li>Squash all of your commits into a single commit via git rebase -i.</li>
+<li>Run the tests by running npm install &amp;&amp; make test from the source directory.</li>
+<li>Assuming those pass, send the Pull Request off to me for review!</li>
+</ol>
+
+<p>Please do not iterate the package.json version number – I will do that myself
+when I publish it to NPM.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/JohnPostlethwait/react_explicit_prop_declaration">React explicit prop declaration</a> is maintained by <a href="https://github.com/JohnPostlethwait">JohnPostlethwait</a>.</span>
